# Rustphie

./: Cargo.toml  README.md
crates/config/: Cargo.toml
crates/config/src/: config.rs  lib.rs
crates/rustphie/: Cargo.toml
crates/rustphie-dispatcher/: Cargo.toml
crates/rustphie-dispatcher/src/: dispatcher.rs  handler.rs  lib.rs
crates/rustphie-dispatcher/tests/: dispatcher_message_upd.rs
crates/rustphie-helpers/: Cargo.toml
crates/rustphie-helpers/src/: errors.rs  lib.rs  traits.rs  types.rs
crates/rustphie-macros/: Cargo.toml
crates/rustphie-macros/src/: attr.rs  callbackquery.rs  command.rs  errors.rs  fields_parse.rs  gen.rs  lib.rs  parsers.rs
crates/rustphie-macros/tests/: command.rs
crates/rustphie/src/: main.rs
crates/rustphie/src/modules/: mod.rs  start.rs
crates/rustphie/src/utils/: errors.rs  mod.rs  traits.rs
crates/rustphie/tests/: callbackdata_parser.rs  command.rs
