[package]
name = "rustphie-dispatcher"
version = "0.1.0"
authors = ["sabby <sabby.6@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.4"
teloxide = "0.3.4"
anyhow = "1"

[dependencies.rustphie-helpers]
path = "../rustphie-helpers"

[dev-dependencies]
futures = "0.3"
