[package]
name = "rustphie"
version = "0.1.0"
edition = "2018"

[dependencies]
teloxide = { git = "https://github.com/teloxide/teloxide" }
tokio = { version = "0.2", features = ["macros"] }
config = { path = "../config" }
log = "0.4"
anyhow = "1"
lazy_static = "1"
pretty_env_logger = "0"
regex = "1"

rustphie-macros = { path = "../rustphie-macros" }
