[package]
name = "rustphie"
version = "0.1.0"
edition = "2018"

[dependencies]
teloxide = { version = "0.4.0", features = ["auto-send"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
config = { path = "../config" }
log = "0.4"
anyhow = "1"
lazy_static = "1"
pretty_env_logger = "0"
regex = "1"
tokio-stream = "0.1"
async-trait = "0.1"

rustphie-macros = { path = "../rustphie-macros" }
rustphie-helpers = { path = "../rustphie-helpers" }
rustphie-dispatcher = { path = "../rustphie-dispatcher" }
